<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.repeate4mlesson1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.repeate4mlesson1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.repeate4mlesson1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/newTaskFragment"
        android:name="com.example.repeate4mlesson1.ui.home.NewTaskFragment"
        android:label="New Task" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.repeate4mlesson1.ui.profile.ProfileFragment"
        android:label="profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="com.example.repeate4mlesson1.ui.onbording.OnBoardFragment"
        android:label="Onboard" >

    </fragment>
</navigation>