<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/auth_anim"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone_number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            app:layout_constraintTop_toBottomOf="@id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+996"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_verification_code"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code"
        android:visibility="gone"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_verification_code"
            app:layout_constraintTop_toBottomOf="@id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_auth"
        app:layout_constraintTop_toBottomOf="@id/layout_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:cornerRadius="10dp"
        android:text="@string/next"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>





</androidx.constraintlayout.widget.ConstraintLayout>